<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/background_dialog"
    android:layout_marginTop="5dp"
    >
    <ImageView
        android:id="@+id/imageViewNotificationLogout"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:scaleType="fitXY" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_toEndOf="@+id/imageViewNotificationLogout"
        android:gravity="center_vertical"
        android:text="@string/txt_notification"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_toRightOf="@+id/imageViewNotificationLogout" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/imageViewNotificationLogout"
        android:layout_marginTop="5dp"
        android:background="@color/blue" />

    <TextView
        android:id="@+id/textViewNotificationLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewLine"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:lines="2"
        android:text="@string/txt_description_dialog"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_below="@id/textViewNotificationLogout"
        android:id="@+id/buttonDialogLogout"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@drawable/custom_login_enable"
        android:text="@string/txt_logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginLeft="20dp" />

    <Button
        android:layout_marginBottom="15dp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/textViewNotificationLogout"
        android:layout_marginEnd="20dp"
        android:layout_alignParentEnd="true"
        android:id="@+id/buttonDialogNo"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@drawable/custom_login_enable"
        android:text="@string/txt_no"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp" />
</RelativeLayout>