<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:onClick="hideKeyBoard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        android:paddingHorizontal="@dimen/dp_24">
        <ProgressBar
            android:id="@+id/progressBarSign"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:id="@+id/buttonSignBack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            android:src="@drawable/back"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"/>
        <TextView
            android:id="@+id/textDescriptionSign"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignBack"
            android:layout_marginTop="@dimen/dp_40"
            android:textSize="@dimen/sp_32"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:text="@string/txt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:id="@+id/relativeSign"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDescriptionSign"
            android:layout_marginTop="@dimen/dp_60"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/relativeNameSign"
                android:layout_alignParentStart="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true">
                <TextView
                    android:id="@+id/textNameSign"
                    android:textSize="14sp"
                    android:textAllCaps="true"
                    android:text="@string/txt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/textDescriptionNameSign"
                    android:layout_below="@+id/textNameSign"
                    android:layout_marginTop="@dimen/dp_7"
                    android:hint="@string/txt_app"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/imageNameSign"
                    android:src="@drawable/user"
                    android:background="@null"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/dp_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="40dp"
                android:layout_below="@+id/relativeNameSign"
                android:id="@+id/relativeEmailSign"
                android:layout_alignParentStart="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true">
                <TextView
                    android:id="@+id/textEmailSign"
                    android:textSize="14sp"
                    android:textAllCaps="true"
                    android:text="@string/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/textDescriptionEmailSign"
                    android:layout_below="@+id/textEmailSign"
                    android:layout_marginTop="@dimen/dp_7"
                    android:hint="@string/txt_hint_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/imageEmailSign"
                    android:src="@drawable/email"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/dp_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativePassSign"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/relativeEmailSign"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true">
                <TextView
                    android:id="@+id/textPassSign"
                    android:textSize="@dimen/sp_14"
                    android:textAllCaps="true"
                    android:text="@string/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/textDescriptionPassSign"
                    android:layout_below="@+id/textPassSign"
                    android:layout_marginTop="7dp"
                    android:hint="@string/txt_hint_pass"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/imagePassSign"
                    android:src="@drawable/pass"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/dp_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
            <CheckBox
                android:layout_marginStart="@dimen/dp_30"
                android:id="@+id/checkboxSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativePassSign"
                android:layout_marginTop="@dimen/dp_32"
                android:button="@drawable/custom_checkbox"
                android:layout_marginLeft="@dimen/dp_30" />
            <TextView
                android:layout_marginStart="@dimen/dp_10"
                android:layout_toEndOf="@+id/checkboxSign"
                android:id="@+id/textCheckboxSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativePassSign"
                android:layout_marginTop="@dimen/dp_32"
                android:textColor="#999999"
                android:textSize="@dimen/sp_14"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_toRightOf="@+id/checkboxSign" />
            <Button
                android:id="@+id/buttonSign"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_below="@+id/checkboxSign"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_47"
                android:text="@string/txt_register"
                android:textColor="@color/white"
                android:background="@drawable/custom_login_denable"
                android:enabled="false"
                android:textSize="@dimen/sp_16" />
        </RelativeLayout>
        <TextView
            android:id="@+id/textLoginNow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_37"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/txt_login_span"
            android:textAllCaps="false"
            android:textColor="@color/grey1"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeSign" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

