<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150"
        android:background="@drawable/background_message" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_228">

        <ImageButton
            android:scaleType="center"
            android:id="@+id/ImageViewBack"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_40"
            android:background="@null"
            android:src="@drawable/ic_back"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dp_12" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_22"
            android:layout_marginTop="@dimen/dp_50"
            android:gravity="center_horizontal"
            android:text="@string/txt_edit_profile"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18" />

        <Button
            android:id="@+id/ButtonSave"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_50"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_12"
            android:background="@null"
            android:text="@string/txt_save"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_12" />
    </RelativeLayout>

    <ScrollView
        android:background="@drawable/custom_recycler_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_120">

        <LinearLayout
            android:onClick="hideKeyBoardMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="6">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">

                <View
                    android:background="@drawable/profile_left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_toStartOf="@+id/CircleImageUserEdit"
                    android:layout_marginLeft="30dp"
                    android:layout_toLeftOf="@+id/CircleImageUserEdit" />

                <ImageView
                    android:id="@+id/CircleImageUserEdit"
                    android:layout_width="143dp"
                    android:layout_height="143dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="42dp"
                    android:src="@mipmap/ic_launcher" />

                <View
                    android:background="@drawable/profile_right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/CircleImageUserEdit"
                    android:layout_toRightOf="@+id/CircleImageUserEdit" />

                <ImageButton
                    android:layout_toRightOf="@id/CircleImageUserEdit"
                    android:layout_marginLeft="-60dp"
                    android:layout_marginBottom="-15dp"
                    android:id="@+id/ImageButtonCamera"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="125dp"
                    android:background="@null"
                    android:scaleType="center"
                    android:src="@drawable/ic_camera" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="55dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="73dp"
                    android:layout_height="17dp"
                    android:gravity="top"
                    android:text="@string/txt_name"
                    android:textColor="#999999"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/editTextNameProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:inputType="textEmailAddress"
                    android:shadowColor="@color/grey3"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="24dp"
                    android:fillColor="#4356B4"
                    android:scaleType="fitXY"
                    android:src="@drawable/user"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="14dp"
                    android:gravity="top"
                    android:text="@string/txt_phone"
                    android:textColor="#999999"
                    android:textSize="12sp" />

                <EditText
                    android:hint="@string/txt_hint_phone_number"
                    android:id="@+id/editPhoneProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:inputType="number"
                    android:shadowColor="@color/grey3"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="24dp"
                    android:fillColor="#4356B4"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_phone"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="14dp"
                    android:gravity="top"
                    android:text="@string/txt_date_of_birth"
                    android:textColor="#999999"
                    android:textSize="12sp" />

                <EditText
                    android:hint="@string/txt_hint_date"
                    android:focusable="false"
                    android:id="@+id/editDateOfBirthProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:clickable="false"
                    android:shadowColor="@color/grey3"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="24dp"
                    android:fillColor="#4356B4"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_date_of_birth"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>